Alterações em lógica de Usuários, laboratórios, filiais e papeis.